Add order and product API documentation
